--- a/.github/workflows/build_kernle.yml
+++ b/.github/workflows/build_kernle.yml
@@ -9,7 +9,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: aarch64 toolchain
-      run: mkdir -p ../PLATFORM/prebuilts/gcc/linux-x86/aarch64 && git clone  https://github.com/djb77/aarch64-linux-android-4.9 ../PLATFORM/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9
+      run: sudo rm /bin/python && sudo ln -s /bin/python2.7 /bin/python && mkdir -p ../PLATFORM/prebuilts/gcc/linux-x86/aarch64 && git clone  https://github.com/djb77/aarch64-linux-android-4.9 ../PLATFORM/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9
     - name: make kernel for dream2qltechn
       run: ./build_kernel_64.sh dream2qlte_chn_open -c
 
