--- a/.github/workflows/build_kernle.yml
+++ b/.github/workflows/build_kernle.yml
@@ -2,14 +2,23 @@ name: Samsung SDM8898 Kernel Builder
 
 on:
   push:
-    workflow_dispatch:
+  workflow_dispatch:
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+
+    - name: 构建编译内核环境
+      run: |
+        sudo apt-get update
+        sudo apt-get install binutils binutils-aarch64-linux-gnu binutils-arm-linux-gnueabi git ccache automake flex lzop bison gperf build-essential zip curl zlib1g-dev g++-multilib libxml2-utils bzip2 libbz2-dev libbz2-1.0 libghc-bzlib-dev squashfs-tools pngcrush schedtool dpkg-dev liblz4-tool make optipng maven libssl-dev pwgen libswitch-perl policycoreutils minicom libxml-sax-base-perl libxml-simple-perl bc libc6-dev-i386 lib32ncurses5-dev libx11-dev lib32z-dev libgl1-mesa-dev xsltproc unzip device-tree-compiler python2 python3
+
+        
     - name: aarch64 toolchain
       run: sudo rm /bin/python && sudo ln -s /bin/python2.7 /bin/python && mkdir -p ../PLATFORM/prebuilts/gcc/linux-x86/aarch64 && git clone  https://github.com/djb77/aarch64-linux-android-4.9 ../PLATFORM/prebuilts/gcc/linux-x86/aarch64/aarch64-linux-android-4.9
+
+
     - name: make kernel for dream2qltechn
       run: ./build_kernel_64.sh dream2qlte_chn_open -c
 
