--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -63,6 +63,9 @@ jobs:
         export PATH=$GITHUB_WORKSPACE/kernel_workspace/gcc64/bin:$GITHUB_WORKSPACE/kernel_workspace/gcc32/bin:$PATH
         export KBUILD_BUILD_HOST=企鹅交流:722651738
         export KBUILD_BUILD_USER=kuan-jsbsbxjxh66
+        echo "CONFIG_KSU=y" >> arch/arm64/configs/dream2qlte_chn_open_defconfig
+        sed -i '/CONFIG_LOCALVERSION/d' arch/arm64/configs/dream2qlte_chn_open_defconfig
+        echo "CONFIG_LOCALVERSION="-闲鱼-你好JS-Build"" >> arch/arm64/configs/dream2qlte_chn_open_defconfig
         make -s -j$(nproc --all) O=out ARCH=arm64 dream2qlte_chn_open_defconfig
         make -j$(nproc --all) O=out ARCH=arm64 CLANG_TRIPLE=aarch64-linux-gnu- CROSS_COMPILE=aarch64-linux-android-
                 
